// Sơ đồ ERD — Game Toán Học (BACKUP1606.sql)
// Website: https://dbdiagram.io  →  dán toàn bộ file → Export PNG/SVG/PDF
// Quan hệ: ref > = 1-N | bảng trung gian = N-N

Project gametoanhoc {
  database_type: "MySQL"
  Note: '''
    Sơ đồ ERD — Game Toán Học (BACKUP1606.sql)

    Quan hệ 1-N:
      grades → types → lessons → questions
      grades → questions, types → questions
      users → email_tokens
      users → user_lesson_progress ← lessons, grades, types
      grades → exam_templates → contests
      exam_templates → exam_template_questions ← questions
      users → user_contests ← contests
      users → user_items ← items

    Quan hệ N-N (bảng trung gian):
      • users ↔ lessons (user_lesson_progress)
      • users ↔ contests (user_contests)
      • users ↔ items (user_items)
      • exam_templates ↔ questions (exam_template_questions)

  '''
}

// ========== NGƯỜI DÙNG & XÁC THỰC ==========

Table users {
  id int [pk, increment, note: "PK"]
  username varchar(100) [not null, unique]
  email varchar(150) [unique]
  phone varchar(20) [unique]
  password varchar(255) [not null]
  score bigint [default: 0]
  week_score bigint [default: 0]
  role tinyint [default: 0, note: "0=user, 1=admin"]
  email_verified tinyint [default: 0]
  is_locked tinyint [default: 0]
  ma_tre_em varchar(100) [note: "Tích hợp Kilovia"]
  created_at timestamp
}

Table email_tokens {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token_hash varchar(64) [not null]
  type varchar(20) [note: "verify_email | reset_password"]
  expires_at datetime [not null]
  used_at datetime
}

// ========== NỘI DUNG HỌC TẬP ==========

Table grades {
  id tinyint [pk]
  name varchar(20) [not null]
  description text
  image varchar(512)
}

Table types {
  id smallint [pk, increment]
  grade_id tinyint [not null, ref: > grades.id]
  name varchar(50) [not null]
  description text
  image varchar(512)
  sort_order int [default: 0]
}

Table lessons {
  id smallint [pk, increment]
  type_id smallint [not null, ref: > types.id]
  name varchar(400) [not null]
  status tinyint [default: 1]
  image varchar(512)
  sort_order int [default: 0]
}

Table questions {
  id bigint [pk, increment]
  grade_id tinyint [not null, ref: > grades.id]
  type_id smallint [ref: > types.id]
  lesson_id smallint [not null, ref: > lessons.id]
  question_text text [not null]
  question_image varchar(1024)
  answers_json json [note: "tối đa 4 đáp án"]
}

Table user_lesson_progress {
  user_id int [pk, ref: > users.id]
  lesson_id smallint [pk, ref: > lessons.id]
  grade_id tinyint [ref: > grades.id]
  type_id smallint [ref: > types.id]
  game_id varchar(32) [note: "game1..game11"]
  correct_count smallint
  total_count smallint
  stars tinyint
  attempt_count int [default: 1]
  completed_at timestamp
}

// ========== ĐỀ THI & CUỘC THI ==========

Table exam_templates {
  id int [pk, increment]
  name varchar(100) [not null]
  grade_id tinyint [ref: > grades.id]
  description text
  duration_time smallint [note: "phút"]
  status smallint [default: 0]
}

Table exam_template_questions {
  id int [pk, increment]
  template_id int [not null, ref: > exam_templates.id]
  question_id bigint [not null, ref: > questions.id]
}

Table contests {
  id int [pk, increment]
  name varchar(255) [not null]
  template_id int [not null, ref: > exam_templates.id]
  grade_id int [note: "không có FK trong BACKUP1606"]
  start_time datetime
  end_time datetime
  status tinyint [default: 0]
  prize smallint
  duration_time smallint
}

Table user_contests {
  id int [pk, increment]
  user_id int [ref: > users.id]
  contest_id int [ref: > contests.id]
  score int [default: 0]
  times int [default: 0]
  is_rewarded tinyint [default: 0]
}

// ========== CỬA HÀNG & THÀNH TÍCH ==========

Table items {
  id int [pk]
  name varchar(45) [not null]
  description varchar(100)
  link varchar(200)
  require_score bigint
  level smallint
  effect_type tinyint
  lesson_bonus_points int
  hint_questions int
}

Table user_items {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  item_id int [not null, ref: > items.id]
  purchased_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table achievements {
  id int [pk]
  name varchar(45)
  description varchar(45)
  link varchar(45) [note: "Ảnh huy hiệu top tuần"]
}

// ========== HỆ THỐNG ==========

Table notifications {
  id int [pk, increment]
  name varchar(500)
  status tinyint [default: 1]
}

Table app_runtime_state {
  key_name varchar(64) [pk]
  value_text varchar(64)
  Note: "VD: leaderboard_week_key"
}
